--- a/Origami/Resources/layout/activity_chapterselect.xml
+++ b/Origami/Resources/layout/activity_chapterselect.xml
@@ -83,6 +83,7 @@
         </AbsoluteLayout>
 
         <android.support.v4.view.ViewPager
+            android:overScrollMode="never"
             android:paddingTop="6dp"
             android:clipToPadding="false"
             android:id="@+id/chapters_pager"
