--- a/Origami/Resources/layout/activity_about.xml
+++ b/Origami/Resources/layout/activity_about.xml
@@ -1,4 +1,4 @@
-
+﻿
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
@@ -15,6 +15,12 @@
         android:orientation="horizontal"
         android:background="@color/backgroundColor"
         android:paddingBottom="19dp">
+
+        <Button
+            android:id="@+id/dbgg"
+            android:layout_width="500dp"
+            android:layout_height="50dp"
+            android:text="сделать все хорошо"/>
 
         <LinearLayout
             android:clipToPadding="false"
