--- a/Origami/Resources/layout/icon_chapter.xml
+++ b/Origami/Resources/layout/icon_chapter.xml
@@ -24,39 +24,59 @@
             android:layout_weight="1"
         />   
 
-        <LinearLayout
+        <AbsoluteLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginHorizontal="8dp"
             android:background="@drawable/roundedCorners"
-            android:backgroundTint="@color/baseColor"
-            android:orientation="vertical"
-            android:gravity="center_horizontal">
+            android:backgroundTint="@color/baseColor">
 
-            <TextView
-                android:id="@+id/chapter_name"
+            <LinearLayout
+                android:id="@+id/chapter_info"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Eagle"
-                android:gravity="center"
-                android:textSize="18dp"
-                android:paddingTop="18dp"
-                android:textColor="@color/textColor"
-                android:fontFamily="@font/somatic_rounded"
-                android:paddingBottom="8dp"
-            />
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center_horizontal">
 
-            <TextView
-                android:id="@+id/chapter_progress"
-                android:layout_width="80dp"
-                android:layout_height="30dp"
-                android:background="@drawable/roundedCorners"
-                android:backgroundTint="@color/secondaryColor"
-                android:text="15/20"
-                android:textSize="18dp"
-                android:textColor="@color/textColor"
-                android:fontFamily="@font/somatic_rounded"
-                android:gravity="center"/>
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/chapter_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Eagle"
+                    android:gravity="center"
+                    android:textSize="18dp"
+                    android:paddingTop="18dp"
+                    android:textColor="@color/textColor"
+                    android:fontFamily="@font/somatic_rounded"
+                    android:paddingBottom="8dp"
+                />
+
+                <TextView
+                    android:id="@+id/chapter_progress"
+                    android:layout_width="80dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/roundedCorners"
+                    android:backgroundTint="@color/secondaryColor"
+                    android:text="15/20"
+                    android:textSize="18dp"
+                    android:textColor="@color/textColor"
+                    android:fontFamily="@font/somatic_rounded"
+                    android:gravity="center"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/chapter_lock"
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:src="@drawable/lock"
+                    android:tint="@color/iconColor"
+                />
+            </LinearLayout>
+        </AbsoluteLayout>
     </LinearLayout>
 </LinearLayout>
