--- a/Origami/Resources/layout/modal_no_hints.xml
+++ b/Origami/Resources/layout/modal_no_hints.xml
@@ -33,31 +33,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="fill_horizontal">
-
-            <ImageButton
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:layout_marginLeft="15dp"
-                android:padding="12dp"
-                android:src="@drawable/buy"
-                android:tint="@color/iconColor"
-                android:scaleType="centerCrop"
-                android:background="@drawable/roundedcorners"
-                android:backgroundTint="@color/accentColor"
-            />
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-            />
+            android:gravity="center_horizontal">
 
             <ImageButton
                 android:id="@+id/show_ads"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
-                android:layout_marginRight="15dp"
                 android:padding="12dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ads"
