--- a/Origami/Resources/layout/icon_level.xml
+++ b/Origami/Resources/layout/icon_level.xml
@@ -3,12 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="120dp"
     android:layout_height="120dp"
-    android:clipToPadding="false"
     android:background="@drawable/roundedCorners"
-    android:backgroundTint="@color/secondaryColor"
-    android:elevation="@dimen/elevation"
-    android:outlineAmbientShadowColor="@color/baseAmbientShadowColor"
-    android:outlineSpotShadowColor="@color/basePointShadowColor">
+    android:backgroundTint="@color/secondaryColor">
 
     <TextView
         android:id="@+id/level_number"
