--- a/Origami/Resources/layout/modal_level_end.xml
+++ b/Origami/Resources/layout/modal_level_end.xml
@@ -6,14 +6,10 @@
     android:gravity="center">
 
     <LinearLayout
-        android:elevation="@dimen/elevation"
-        android:outlineAmbientShadowColor="@color/baseAmbientShadowColor"
-        android:outlineSpotShadowColor="@color/basePointShadowColor"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:orientation="vertical"
-        android:background="@drawable/roundedCorners"
-        android:backgroundTint="@color/baseColor">
+        android:background="@drawable/roundedBaseColorCornersOutlined">
 
         <TextView
             android:layout_width="match_parent"
