--- a/Origami/Resources/layout/modal_level_end.xml
+++ b/Origami/Resources/layout/modal_level_end.xml
@@ -12,6 +12,7 @@
         android:background="@drawable/roundedBaseColorCornersOutlined">
 
         <TextView
+            android:id="@+id/level_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Level 1"
