--- a/Origami/Resources/layout/modal_level_lose.xml
+++ b/Origami/Resources/layout/modal_level_lose.xml
@@ -13,6 +13,7 @@
         android:background="@drawable/roundedBaseColorCornersOutlined">
 
         <TextView
+            android:id="@+id/level_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Level 1"
